[Java] Remove `AeronCloseHelper`, because its functionality was implemented in Agrona